--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "tslint src"
   },
   "devDependencies": {
+    "@types/color": "^3.0.0",
     "@types/cote": "^0.17.0",
     "@types/faker": "^4.1.5",
     "@types/node": "10.12.18",
@@ -19,7 +20,10 @@
     "typescript": "^3.2.4"
   },
   "dependencies": {
+    "color": "^3.1.0",
     "cote": "^0.19.0",
-    "faker": "^4.1.0"
+    "faker": "^4.1.0",
+    "raspi": "^6.0.0",
+    "raspi-serial": "^5.1.0"
   }
 }
