--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "target": "es2017",
     "module": "commonjs",
+    "esModuleInterop": true,
     "declaration": true,
     "rootDirs": ["./src"],
     "outDir": "./dist",
