--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
   "dependencies": {
     "color": "^3.1.0",
     "cote": "^0.19.0",
-    "faker": "^4.1.0",
+    "faker": "^4.1.0"
+  },
+  "optionalDependencies": {
     "raspi": "^6.0.0",
     "raspi-serial": "^5.1.0"
   }
