--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "devDependencies": {
     "@types/color": "^3.0.0",
+    "@types/console-stamp": "^0.2.32",
     "@types/cote": "^0.17.0",
     "@types/faker": "^4.1.5",
+    "@types/lodash": "^4.14.120",
     "@types/node": "10.12.18",
     "nodemon": "^1.18.9",
     "ts-node": "^8.0.2",
@@ -21,8 +23,10 @@
   },
   "dependencies": {
     "color": "^3.1.0",
+    "console-stamp": "^0.2.7",
     "cote": "^0.19.0",
-    "faker": "^4.1.0"
+    "faker": "^4.1.0",
+    "lodash": "^4.17.11"
   },
   "optionalDependencies": {
     "raspi": "^6.0.0",
